fixed contrast

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,11 +1,11 @@
 body{
-    background-color: lightgrey;
+    background-color: lightblue;
     text-align: center;
-    color: darkgrey;
+    color: black;
     font-family: monospace;
 }
 a{
-    color: cornsilk;
+    color: black;
     text-decoration: none;
 }
 
